2004-06-22  David Malcolm  <david@davemalcolm.demon.co.uk>

        * configure.in: Post-release version bump to 0.7.15

	--- 0.7.14 ---

2004-06-20  David Malcolm  <david@davemalcolm.demon.co.uk>

        * configure.in: Post-release version bump to 0.7.14

	--- 0.7.13 ---
	
	* configure.in: Added requirement for GTK 2.4.0 or later

2004-06-19  David Malcolm  <david@davemalcolm.demon.co.uk>

	* configure.in:  Made gtk-doc usage default to "auto", rather than "no", fixing
	a problem with "make distcheck"	

2004-06-18  David Malcolm  <david@davemalcolm.demon.co.uk>

	* autogen.sh: Always use -Werror when building from CVS

2004-06-17  David Malcolm  <david@davemalcolm.demon.co.uk>

	* configure.in: Fixed option for -Werror (see bug 134747)

2004-06-14  David Malcolm  <dmalcolm@redhat.com>

	* conglomerate.spec.in: Added pixmaps/conglomerate/*.png
	as suggested by Nickolay V. Shmyrev in http://lists.copyleft.no/pipermail/conglomerate-devel/2004-June/002764.html
	
2004-06-08  David Malcolm  <dmalcolm@redhat.com>

	* configure.in: Applied fix for bug 143937 by 
	nshmyrev@yandex.ru (Nickolay V. Shmyrev)

2004-06-04  David Malcolm  <dmalcolm@redhat.com>

	* configure.in: Added test for Sewfox

	* Makefile.am: Added CSS data

2004-05-05  Geert Stappers <stappers@stappers.nl>

	* configure.in
	
	gtk-doc is default disabled. (working on bugzilla #131600)

2004-04-10  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-09  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-20  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-02-24  Geert Stappers <stappers@stappers.nl>

	* NEWS
	
	Removed old news.

2004-02-22  Geert Stappers <stappers@stappers.nl>

	* conglomerate.spec.in
	
	Replaced by the version of Dag Wieers with automade version.
	Yes, the FOSDEM visit was a joy.

2004-02-20  Geert Stappers <stappers@stappers.nl>

	* configure.in