@@ -1,3 +1,8 @@
+2004-06-23  Geert Stappers <stappers@stappers.nl>
+
+	* conglomerate.spec.in: sync with Dag Wiers
+	but kept the added pixmaps/conglomerate/*.png
+
 2004-06-22  David Malcolm  <david@davemalcolm.demon.co.uk>
 
         * configure.in: Post-release version bump to 0.7.15
